# more info https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[metadata]
# replace with your username:
name = Aestheta
version = 1.0.0
author = NSCC-COGS
author_email = kevin.mcguigan@nscc.ca
description = A Geospatial Machine Learning Toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NSCC-COGS/Aestheta
project_urls =
    Bug Tracker = https://github.com/NSCC-COGS/Aestheta/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pyshp

[options.packages.find]
where = src

# [options.data_files.find]
# where = Models